[package]
name = "sokol-sys"
version = "0.4.0"
authors = ["Daniel Ludwig <codi@code-disaster.com>"]
description = "Compilation units for C/C++ libraries used by the sokol Rust bindings."
repository = "https://github.com/code-disaster/sokol-rs"
readme = "README.md"
license = "Zlib"

edition = "2021"

build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }